--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:47:58.374777Z",
@@ -141,7 +141,7 @@
        "9  ব্র্যান্ডটি হলো নোকিয়া. ব্যবহারকারীর নাম হলো ..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.393348Z",
@@ -182,7 +182,7 @@
        "Name: sentence, Length: 1500, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.406231Z",
@@ -230,7 +230,7 @@
        "Name: sentence, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.486904Z",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.512389Z",
@@ -342,7 +342,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.528007Z",
@@ -378,7 +378,7 @@
        "np.int64(39)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.540591Z",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.552259Z",
@@ -448,7 +448,7 @@
        " 'ব্র্যান্ডটি হলো নোকিয়া. ব্যবহারকারীর নাম হলো আফসানা. ঠিকানাটি হলো গুলশান, ঢাকা. আইডি নম্বর হলো ID2023004।']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.566172Z",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.861628Z",
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.928940Z",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.941412Z",
@@ -581,7 +581,7 @@
        "'ব্র্যান্ডটি হলো সনি. ব্যবহারকারীর নাম হলো মাহমুদুল. অর্ডার নম্বরটি ORD11121.'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.956398Z",
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:00.966956Z",
@@ -628,7 +628,7 @@
        "NER(Message='ব্র্যান্ডটি হলো সনি. ব্যবহারকারীর নাম হলো মাহমুদুল. অর্ডার নম্বরটি ORD11121.', username='মাহমুদুল', authorname=None, Address=None, bookname=None, productname=None, publishername=None, categoryname=None, brandname='সনি', date=None, phoneno=None, orderno='ORD11121', trnx_ID=None)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-22T07:48:04.117538Z",
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "execution_failed": "2025-01-22T07:55:35.574Z",
@@ -772,7 +772,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing User Messages: 100%|██████████| 10/10 [00:24<00:00,  2.47s/it]\n"
+      "Processing User Messages: 100%|██████████| 1461/1461 [1:17:20<00:00,  3.18s/it]\n"
      ]
     }
    ],
@@ -781,7 +781,7 @@
     "\n",
     "parsed_events = []\n",
     "\n",
-    "for message in tqdm(messages[:10], desc=\"Processing User Messages\"):\n",
+    "for message in tqdm(messages, desc=\"Processing User Messages\"):\n",
     "    completion = client.beta.chat.completions.parse(\n",
     "        model=\"gpt-4o-2024-08-06\",\n",
     "        messages=[\n",
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
